Fix post-build copy path

--- a/Source/Benchwarp.csproj
+++ b/Source/Benchwarp.csproj
@@ -114,6 +114,6 @@
     </PreBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
-    <PostBuildEvent>copy "$(TargetPath)" "C:\Program Files (x86)\Steam\steamapps\common\Hollow Knight\hollow_knight_Data\Managed\Mods"</PostBuildEvent>
+    <PostBuildEvent>copy "$(TargetPath)" "D:\SteamLibrary\SteamApps\common\Hollow Knight\hollow_knight_Data\Managed\Mods\Benchwarp_16_10.dll"</PostBuildEvent>
   </PropertyGroup>
 </Project>
